--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hotels</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
         <header>
@@ -25,11 +26,12 @@
                 </nav>
                 <input type="text" name="search" value="Поиск">
                 <svg
-                        id="Capa_1"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 512 512">
+                    id="Capa_1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 512 512">
                     <path d="M508.87,478.71,360.14,330a201.64,201.64,0,0,0,45.19-127.31C405.33,90.92,314.42,0,202.67,0S0,90.92,0,202.67,90.92,405.33,202.67,405.33A201.64,201.64,0,0,0,330,360.14L478.71,508.87a10.65,10.65,0,0,0,15.08,0l15.09-15.08A10.66,10.66,0,0,0,508.87,478.71Zm-306.2-116c-88.23,0-160-71.77-160-160s71.77-160,160-160,160,71.77,160,160S290.9,362.67,202.67,362.67Z"
-                          transform="translate(0 0)"/>
+                          transform="translate(0 0)"
+                    />
                 </svg>
                 </div>
         </header>
@@ -56,7 +58,7 @@
                 </div>
             </section>
             <section class="about">
-                <h2 class="lead">О нас</h2>
+                <h2 class="section-lead">О нас</h2>
                 <p class="about-text">Идейные соображения высшего порядка, а также сложившаяся структура организации влечет за собой
                     процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
                     Идейные соображения высшего порядка, а также дальнейшее развитие различных форм деятельности
@@ -66,6 +68,7 @@
                 </p>
             </section>
             <section class="services">
+                <h2 class="section-lead">Услуги</h2>
                 <ul class="services-cards">
                     <li class="services-cards-item">
                         <img src="img/services/services-1.jpg" alt="exclusive image">
@@ -88,18 +91,40 @@
                 </ul>
             </section>
             <section class="benefits">
+                <h2 class="section-lead">Преимущества</h2>
                 <ul class="benefits-cards">
                     <li class="benefits-cards-item">
-                        <span></span>
-                        <p></p>
+                        <img class="benefits-cards-icon" src="img/benefits-icons/bathtub.svg" alt="bath icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Идейные соображения высшего порядка, а также постоянный количественный рост</p>
                     </li>
-                    <li class="benefits-cards-item"></li>
-                    <li class="benefits-cards-item"></li>
-                    <li class="benefits-cards-item"></li>
-                    <li class="benefits-cards-item"></li>
-                    <li class="benefits-cards-item"></li>
-                    <li class="benefits-cards-item"></li>
-                    <li class="benefits-cards-item"></li>
+                    <li class="benefits-cards-item">
+                        <img class="benefits-cards-icon" src="img/benefits-icons/hanger.svg" alt="hanger icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Значимость этих проблем настолько очевидна, что вопрос остается открытым</p>
+                    </li>
+                    <li class="benefits-cards-item">
+                        <img class="benefits-cards-icon" src="img/benefits-icons/heating.svg" alt="heating icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Таким образом реализация плановых заданий играет важную роль для понимания</p>
+                    </li>
+                    <li class="benefits-cards-item">
+                        <img class="benefits-cards-icon" src="img/benefits-icons/hotel-key.svg" alt="key icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Повседневная практика показывает, что сложившаяся структура организации</p>
+                    </li>
+                    <li class="benefits-cards-item">
+                        <img class="benefits-cards-icon" src="img/benefits-icons/parking.svg" alt="parking icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Равным образом рамки и место обучения кадров способствует подготовки сотрудника</p>
+                    </li>
+                    <li class="benefits-cards-item">
+                        <img class="benefits-cards-icon" src="img/benefits-icons/reception.svg" alt="reception icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Консультация с активом влечет за собой процесс внедрения услуг нашего сервиса </p>
+                    </li>
+                    <li class="benefits-cards-item">
+                        <img class="benefits-cards-icon" src="img/benefits-icons/security-box.svg" alt="security-box icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Повседневная практика показывает, что дальнейшее развитие различных форм</p>
+                    </li>
+                    <li class="benefits-cards-item">
+                        <img class="benefits-cards-icon" src="img/benefits-icons/swimming-pool.svg" alt="swimming-pool icon" aria-label="presentation">
+                        <p class="benefits-cards-description">Значимость этого настолько очевидна, что консультация наших экспертов помогает</p>
+                    </li>
                 </ul>
             </section>
         </main>
