--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <header>
-            <div class="container">
+    <div class="container">
+        <header class="header">
+            <div class="contacts">
                 <a href="#" class="img-logo" ><img src="img/header/logo.png" alt="Logo Lagoona"></a>
                 <p class="phone">+7 495 322 54 48 34</p>
                 <a href="#" class="personal-arrow"><img src="img/header/arrow-header.png" alt="arrow"></a>
@@ -33,7 +34,7 @@
                           transform="translate(0 0)"
                     />
                 </svg>
-                </div>
+            </div>
         </header>
         <main>
             <section class="section-quick-booking">
@@ -50,8 +51,8 @@
             </section>
             <section class="special-offer">
                 <h2 class="lead">Спецпредложение</h2>
-                <div class="special-offer-tex">
-                    <img src="img/special-offer/special-offer.jpg" alt="special offer image">
+                <div class="special-offer-text">
+                    <img src="img/special-offer/special-offer.jpg" alt="special offer image" class="image special-offer-image">
                     <h1>Номера категории люкс</h1>
                     <p class="special-offer-sum">от 5 000 р</p>
                     <a href="" class="detail">Подробнее ></a>
@@ -127,6 +128,143 @@
                     </li>
                 </ul>
             </section>
+            <section class="placement">
+                <ul class="placement-list">
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-1.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star-empty.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 4 698 р / ночь </p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-2.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star-empty.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 5 148 р / ночь</p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-3.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 6 254 р / ночь</p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-4.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 6 320 р / ночь</p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-5.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star-empty.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 6 457р / ночь</p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-6.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star-empty.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 6 490 р / ночь</p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-7.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star-empty.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 6 505 р / ночь</p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-8.jpg" alt="" aria-label="presentation">
+                        <div class="rate">
+                            <img src="img/placement/i-star.png" alt="Starz">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                            <img src="img/placement/i-star.png" alt="">
+                        </div>
+                        <div class="placement-list-description">
+                            <p class="placement-list-price">от 6 824 р / ночь</p>
+                            <p class="placement-list-foreign">Lagoona española</p>
+                            <p class="placement-list-place">Барселона, Испания</p>
+                        </div>
+                        <button>Номера</button>
+                    </li>
+                    <li class="placement-list-item">
+                        <img class="img img-placement-image" src="img/placement/placement-all.jpg" alt="" aria-label="presentation">
+                        <a href="#" class="placement-list-link">Посмотреть все варианты</a>
+                    </li>
+                </ul>
+            </section>
         </main>
+    </div>
     </body>
 </html>
