changes in html

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 </ul>
             </section>
             <section class="placement">
+                <h2 class="section-lead">Размещение</h2>
                 <ul class="placement-list">
                     <li class="placement-list-item">
                         <img class="img img-placement-image" src="img/placement/placement-1.jpg" alt="" aria-label="presentation">
